<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Comm_Chat"
        android:title="@string/community_chat" />
    <item
        android:id="@+id/nav_Donations"
        android:title="@string/menu_donations" />
    <item
        android:id="@+id/nav_Photos"
        android:title="@string/photos" />
    <item
        android:id="@+id/nav_Volunteer"
        android:title="@string/volunteer" />
    <item
        android:id="@+id/nav_About"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_Join_Us"
        android:title="@string/join_us" />
    <item
        android:id="@+id/nav_Appointments"
        android:title="@string/appointments" />
    <item
        android:id="@+id/nav_Account"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_Log_Out"
        android:title="@string/log_out" />
</menu>