<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imgVolCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user__1__1"
            android:contentDescription="@string/person_image" />

        <TextView
            android:id="@+id/lblVolCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/vol_0_0"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgVolCount" />

        <TextView
            android:id="@+id/lblVolTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/volunteer_title"
            android:textFontWeight="600"
            app:layout_constraintStart_toEndOf="@+id/imgVolCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblVolDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_01_01_2000"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgVolCount"
            app:layout_constraintTop_toBottomOf="@+id/lblVolTitle" />

        <TextView
            android:id="@+id/lblVolTimeFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_00_00_am_11_59_pm"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgVolCount"
            app:layout_constraintTop_toBottomOf="@+id/lblVolDate" />

        <TextView
            android:id="@+id/lblLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/food_resilience_unit"
            android:textFontWeight="600"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgVolCount"
            app:layout_constraintTop_toBottomOf="@+id/lblVolTimeFrame" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="191sp"
            android:layout_height="60dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/vol_address"
            android:textFontWeight="400"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imgVolCount"
            app:layout_constraintTop_toBottomOf="@+id/lblLocationName" />

        <ImageView
            android:id="@+id/imgVolArrow"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblAddress"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/vector_2"
            android:contentDescription="@string/continue_to_next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>